# tsetlin_machine_c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_2a66a50a2aa1336bf74e0d99de4e6767.html  dir_2a66a50a2aa1336bf74e0d99de4e6767.js  dir_d2089a3a34e7bd0734f3e2a2b0352922.html  dir_d2089a3a34e7bd0734f3e2a2b0352922.js  dir_d4fcd16039cb8159cfc0f1bbbdc480f9.html  dir_d4fcd16039cb8159cfc0f1bbbdc480f9.js  fast__prng_8c.html  fast__prng_8c.js  fast__prng_8c_source.html  fast__prng_8h.html  fast__prng_8h.js  fast__prng_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  sparse__tsetlin__machine_8c.html  sparse__tsetlin__machine_8c.js  sparse__tsetlin__machine_8c_source.html  sparse__tsetlin__machine_8h.html  sparse__tsetlin__machine_8h.js  sparse__tsetlin__machine_8h_source.html  stateless__tsetlin__machine_8c.html  stateless__tsetlin__machine_8c.js  stateless__tsetlin__machine_8c_source.html  stateless__tsetlin__machine_8h.html  stateless__tsetlin__machine_8h.js  stateless__tsetlin__machine_8h_source.html  structFastPRNG-members.html  structFastPRNG.html  (+25 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  (+2 more)
examples/: CMakeLists.txt
examples/mnist/: CMakeLists.txt
examples/mnist/c/: mnist_util.c  mnist_util.h  model_size.c  pretrained_inference_demo.c  training_demo.c
examples/mnist/python/: get_data.py  get_pretrained.py
examples/noisy_xor/: CMakeLists.txt  noisy_xor.c  noisy_xor_benchmark.c  noisy_xor_generate_dataset.c  sparse_noisy_xor.c
examples/noisy_xor/data/: noisy_xor_dataset.h
examples/notebooks/: digits.ipynb  f_mnist.ipynb  noisy_xor.ipynb  noisy_xor_testing.ipynb
examples/python/: digits.ipynb  f_mnist.ipynb  noisy_xor.ipynb
schemas/: CMakeLists.txt
src/tsetlin_machine_c/: CMakeLists.txt
src/tsetlin_machine_c/include/: fast_prng.h  sparse_tsetlin_machine.h  stateless_tsetlin_machine.h  tsetlin_machine.h  utility.h
src/tsetlin_machine_c/src/: fast_prng.c  sparse_tsetlin_machine.c  stateless_tsetlin_machine.c  tsetlin_machine.c
src/tsetlin_machine_py/: __init__.py  c_tsetlin_clf.py  c_tsetlin_sparse_clf.py  green_tsetlin_clf.py  green_tsetlin_sparse_clf.py  gt_to_bin.py  gt_to_fbs.py
tests/: CMakeLists.txt
tests/c/: test_linked_list.c  test_runner.c  test_tsetlin_machine.c
tmp/: makefile
tmp/data/demos/mnist/: .gitignore
tmp/demos/mnist/c/: mnist_util.c  pretrained_inference_demo.c  training_demo.c
tmp/demos/mnist/python/: get_data.py  get_pretrained.py
tmp/demos/model_size/c/: demo.c
